# info2_vorlesung_ws23

./: .gitignore  CMakeLists.txt  README.md  lldb.md
Termin_01/: bufferoverflow.c
Termin_02/primzahl/: primzahl.c
Termin_02/sortierung/: makefile  sortierung.c  sortierung.h  sortierungsvergleich.c  stoppuhr.c  stoppuhr.h  zufallsarray.c  zufallsarray.h
Termin_03/: anfangsbuchstabe.c  eingabe.c  eingabe.h  eingabeTest.c  fehler.c  laengen.c
Termin_04/: stringaddierer.c  stringtausch.c
Termin_05/: callbacks.c  const.c  stringsortierung.c
Termin_06/: main.c  namesarchive.c  namesarchive.h
Termin_07/: main.c  makefile  namesarchive.c  namesarchive.h
Termin_08/: callByReference.c  main.c  makefile  namesarchive.c  namesarchive.h
Termin_09/: main.c  makefile  namesarchive.c  stringlist.c  stringlist.h
Termin_10/: main.c  makefile  namesarchive.c  namesarchive.h  stringbst.c  stringbst.h
Termin_11/bmp/: bmp.c  bmp.h  main.c  makefile
Termin_11/namesarchive/: main.c  makefile  names.txt  namesarchive.c  namesarchive.h
Termin_12/: bst.c  bst.h  main.c  makefile
